--- a/css/public/gestures.css
+++ b/css/public/gestures.css
@@ -9,3 +9,11 @@
 .is-green {
   background-color: lightgreen;
 }
+
+.huge-letter {
+  font-size: 300px;
+  margin: 10px auto;
+  line-height: 300px;
+  background-color: lightblue;
+  text-align: center;
+}
