using get/set and link correctly

--- a/app/templates/application.handlebars
+++ b/app/templates/application.handlebars
@@ -25,8 +25,8 @@
                 {{view App.NavItemView linkState="handlingEvents" content="Handling Events"}}
                 <li class="nav-header">Examples</li>
                 {{view App.NavItemView linkState="panAndPinch" content="Pan & Pinch"}}
-                {{view App.NavItemView linkState="swipe" content="Tap & TouchHold"}}
-                {{view App.NavItemView linkState="tapAndTouchHold" content="Swipe"}}
+                {{view App.NavItemView linkState="tapAndTouchHold" content="Tap & TouchHold"}}
+                {{view App.NavItemView linkState="swipe" content="Swipe"}}
 
                 <li class="nav-header">API</li>
                 <li><a href="/api/index.html">YuiDoc</a></li>
