Add Simultaneously example

--- a/app/templates/swipe.handlebars
+++ b/app/templates/swipe.handlebars
@@ -1,11 +1,6 @@
 
-{{#view App.LetterSwipeView}}
-  <div class="huge-letter">
-    {{ view.letter }}
-  </div>
+<div class="alert alert-info">
+  <p> Swipe left and right on the letter</p>
+</div>
 
-  <div class="alert alert-info">
-    Swipe left and right on the letter
-  </div>
-
-{{/view}}
+{{view App.LetterSwipeView class="is-big"}}
