--- a/app/templates/application.handlebars
+++ b/app/templates/application.handlebars
@@ -27,6 +27,7 @@
                 {{view App.NavItemView linkState="panAndPinch" content="Pan & Pinch"}}
                 {{view App.NavItemView linkState="tapAndTouchHold" content="Tap & TouchHold"}}
                 {{view App.NavItemView linkState="swipe" content="Swipe"}}
+                {{view App.NavItemView linkState="simultaneously" content="Simultaneously"}}
 
                 <li class="nav-header">API</li>
                 <li><a href="/api/index.html">YuiDoc</a></li>
