--- a/app/templates/simultaneously.handlebars
+++ b/app/templates/simultaneously.handlebars
@@ -1,26 +1,19 @@
 
 <div class="alert alert-info">
-  <p>The swipe gesture of the green box cannot be recognized whenever other gesture is being recognized</p>
+  <p>You could configure your gestures to be able to be recognized simultaneously with other gestures or being the only one recognized at the same time. Try it with  the <b>PanGesture of the red box</b>.</p>
 </div>
 
 
 <div class="row-fluid">
-    <div class="span6">
-      {{view App.LetterSwipeView }}
-    </div>
+      {{view App.PanPhotoCanvasView class="span6"}}
 
-    <div class="span6">
-      {{view App.LetterSwipeView }}
-    </div>
+      {{view App.NonSimultaneouslyPanPhotoCanvasView class="span6 is-border-highlighted"}}
 </div>
 
+<div class="space"></div>
 
 <div class="row-fluid">
-    <div class="span6">
-      {{view App.LetterSwipeView }}
-    </div>
+      {{view App.LetterSwipeView class="span6"}}
 
-    <div class="span6">
-      {{view App.NonSimultaneouslyLetterSwipeView class="is-green" }}
-    </div>
+      {{view App.LetterSwipeView class="span6"}}
 </div>
