--- a/css/public/gestures.css
+++ b/css/public/gestures.css
@@ -1,15 +1,20 @@
-.tap-view {
-  height: 200px;
-  width: 200px;
-  background-color: lightblue;
-  float: left;
-  margin: 10px;
-}
-
+/* states */
 .is-green {
   background-color: lightgreen;
 }
 
+.is-border-highlighted {
+  border: 4px solid red;
+}
+
+/* utils */
+
+.space {
+  height: 20px;
+}
+
+
+/* views */
 .letter-swipe-view {
 
   font-size: 100px;
@@ -26,4 +31,19 @@
 
 .letter-swipe-view.is-green {
   background-color: lightgreen;
+}
+
+
+.photo-canvas-view {
+  height: 150px;
+
+}
+
+
+.tap-view {
+  height: 200px;
+  width: 200px;
+  background-color: lightblue;
+  float: left;
+  margin: 10px;
 }
