Change design of Pan&Pinch example to use bootstrap buttons

--- a/app/templates/application.handlebars
+++ b/app/templates/application.handlebars
@@ -23,10 +23,12 @@
                 {{view App.NavItemView linkState="emberTouch" content="Ember Touch"}}
                 {{view App.NavItemView linkState="objectResponsabilities" content="Object Responsabilities"}}
                 {{view App.NavItemView linkState="handlingEvents" content="Handling Events"}}
-                <li class="nav-header">Examples</li>
+                <li class="nav-header">Examples of Gestures</li>
                 {{view App.NavItemView linkState="panAndPinch" content="Pan & Pinch"}}
                 {{view App.NavItemView linkState="tapAndTouchHold" content="Tap & TouchHold"}}
                 {{view App.NavItemView linkState="swipe" content="Swipe"}}
+
+                <li class="nav-header">Examples of Coordination</li>
                 {{view App.NavItemView linkState="simultaneously" content="Simultaneously"}}
 
                 <li class="nav-header">API</li>
