Add Application Gesture Manager example

--- a/app/templates/application.handlebars
+++ b/app/templates/application.handlebars
@@ -30,6 +30,7 @@
 
                 <li class="nav-header">Examples of Coordination</li>
                 {{view App.NavItemView linkState="simultaneously" content="Simultaneously"}}
+                {{view App.NavItemView linkState="applicationGestureManager" content="Application Gesture Manager"}}
 
                 <li class="nav-header">API</li>
                 <li><a href="/api/index.html">YuiDoc</a></li>
