--- a/app/templates/tap_and_touch_hold.handlebars
+++ b/app/templates/tap_and_touch_hold.handlebars
@@ -6,13 +6,13 @@
 <div class="row-fluid">
 
   <div class="span6">
-    {{#view App.TapView class="btn btn-primary btn-large" }}
+    {{#view App.TapDisabledView class="btn btn-primary btn-large" }}
       Tap Once
     {{/view}}
   </div>
 
   <div class="span6">
-    {{#view App.DoubleTapView class="btn btn-danger btn-large" }}
+    {{#view App.DoubleTapDisabledView class="btn btn-danger btn-large" }}
       Tap Twice
     {{/view}}
   </div>
@@ -24,13 +24,13 @@
 <div class="row-fluid">
 
   <div class="span6">
-    {{#view App.TouchHoldView class="btn btn-info btn-large"}}
+    {{#view App.TouchHoldDisabledView class="btn btn-info btn-large"}}
       Touch and hold for 2 seconds with one finger
     {{/view}}
   </div>
 
   <div class="span6">
-    {{#view App.DoubleTouchHoldView class="btn btn-warning btn-large"}}
+    {{#view App.DoubleTouchHoldDisabledView class="btn btn-warning btn-large"}}
       Touch and hold for 1 second with two fingers
     {{/view}}
   </div>
