--- a/app/templates/application.handlebars
+++ b/app/templates/application.handlebars
@@ -31,7 +31,7 @@
                 <li class="nav-header">Examples of Coordination</li>
                 {{view App.NavItemView linkState="simultaneously" content="Simultaneously"}}
                 {{view App.NavItemView linkState="applicationGestureManager" content="Application Gesture Manager"}}
-
+                {{view App.NavItemView linkState="isEnabled" content="Gesture IsEnabled"}} 
                 <li class="nav-header">API</li>
                 <li><a href="/api/index.html">YuiDoc</a></li>
               </ul>
