Include GestureDelegate Coordination Example

--- a/app/templates/is_enabled.handlebars
+++ b/app/templates/is_enabled.handlebars
@@ -1,6 +1,6 @@
 
 <div class="alert alert-info">
-  <p>You could manage a gesture recognation based on its <b>isEnabled</b> property. Toggle the button to change the <b>isEnabled</b> value and test the views at the right side.</p>
+  <p>You could manage a gesture recognition based on its <b>isEnabled</b> property. Toggle the button to change the <b>isEnabled</b> value and test the views at the right side.</p>
 </div>
 
 
@@ -40,4 +40,3 @@
     panIsEnabledBinding="panIsEnabled" }}
 
 </div>
-
