--- a/app/templates/application.handlebars
+++ b/app/templates/application.handlebars
@@ -19,7 +19,6 @@
           <div class="well side-bar">
               <ul class="nav nav-list">
                 <li class="nav-header">Docs</li>
-
                 {{view App.NavItemView linkState="emberTouch" content="Ember Touch"}}
                 {{view App.NavItemView linkState="objectResponsabilities" content="Object Responsabilities"}}
                 {{view App.NavItemView linkState="handlingEvents" content="Handling Events"}}
@@ -27,11 +26,11 @@
                 {{view App.NavItemView linkState="panAndPinch" content="Pan & Pinch"}}
                 {{view App.NavItemView linkState="tapAndTouchHold" content="Tap & TouchHold"}}
                 {{view App.NavItemView linkState="swipe" content="Swipe"}}
-
                 <li class="nav-header">Examples of Coordination</li>
                 {{view App.NavItemView linkState="simultaneously" content="Simultaneously"}}
                 {{view App.NavItemView linkState="applicationGestureManager" content="Application Gesture Manager"}}
                 {{view App.NavItemView linkState="isEnabled" content="Gesture IsEnabled"}} 
+                {{view App.NavItemView linkState="gestureDelegate" content="Gesture Delegate"}} 
                 <li class="nav-header">API</li>
                 <li><a href="/api/index.html">YuiDoc</a></li>
               </ul>
