--- a/app/templates/application_gesture_manager.handlebars
+++ b/app/templates/application_gesture_manager.handlebars
@@ -1,21 +1,20 @@
 
 <div class="alert alert-info">
-  <p>You could block gestures recognation at the Application level. Toggle the button and test the views at the right side.</p>
+  <p>You could block gestures recognition at the Application level. Toggle the button and test the views at the right side.</p>
 </div>
 
 
 <div class="row-fluid">
 
+  {{#view App.ApplicationGestureManagerButtonView class="span6" }}
 
-    {{#view App.ApplicationGestureManagerButtonView class="span6" }}
+    {{#if view.isGesturesBlocked}}
+      Blocking all the gestures
+    {{else}}
+      Gestures can be recognized
+    {{/if}}
 
-      {{#if view.isGesturesBlocked}}
-        Blocking all the gestures
-      {{else}}
-        Gestures can be recognized
-      {{/if}}
-
-    {{/view}}
+  {{/view}}
 
   {{view App.LetterSwipeView class="span6"}}
 
