Add Gesture Delegate Rules example

--- a/app/templates/application.handlebars
+++ b/app/templates/application.handlebars
@@ -31,6 +31,7 @@
                 {{view App.NavItemView linkState="applicationGestureManager" content="Application Gesture Manager"}}
                 {{view App.NavItemView linkState="isEnabled" content="Gesture IsEnabled"}} 
                 {{view App.NavItemView linkState="gestureDelegate" content="Gesture Delegate"}} 
+                {{view App.NavItemView linkState="gestureDelegateRules" content="Gesture Delegate Rules"}} 
                 <li class="nav-header">API</li>
                 <li><a href="/api/index.html">YuiDoc</a></li>
               </ul>
