Added code section to examples

--- a/app/templates/index.handlebars
+++ b/app/templates/index.handlebars
@@ -17,10 +17,8 @@
         </div>
 
         <div class="span6">
-              <h2>Coordinate Gesture Recognition</h2>
-              <p>Use gestureDelegates or application gesture
-              manager to handle when your gestures are able to
-              be recognized based on your application
+              <h2>Coordinate</h2>
+              <p>Provides a set of tools to coordinate your gestures recognition based on your application
               logic.</p>
         </div>
     </div>
