--- a/app/templates/application_gesture_manager.handlebars
+++ b/app/templates/application_gesture_manager.handlebars
@@ -1,6 +1,6 @@
 
 <div class="alert alert-info">
-  <p>You could block gestures recognition at the Application level. Toggle the button and test the views at the right side.</p>
+  <p>You could block Application gestures recognition with <code>App.gestureManager.isAllBlocked</code> property. Toggle the button and test the views at the right side.</p>
 </div>
 
 
@@ -27,3 +27,26 @@
   {{view App.PanPhotoCanvasView class="offset6 span6"}}
 </div>
 
+
+<div class="space is-code"></div>
+
+<div class="row-fluid">
+
+  <div class="span12">
+    <span class="label label-info">Code</span>
+    <pre>
+App.ApplicationGestureManagerButtonView = Em.View.extend({
+  isGesturesBlockedBinding: '<b>App.gestureManager.isAllBlocked</b>',
+
+  click: function() {
+    set(this, 'isGesturesBlocked', !get(this, 'isGesturesBlocked') );
+  },
+
+  willDestroyElement: function() {
+    App.gestureManager.set('isAllBlocked', false);
+  }
+
+});
+    </pre>
+  </div>
+</div>
