--- a/app/templates/gesture_delegate_rules.handlebars
+++ b/app/templates/gesture_delegate_rules.handlebars
@@ -1,9 +1,8 @@
 
 <div class="alert alert-info">
-  Gesture Delegate logic can be composed based on reusable <b>GestureDelegateRule</b> instances. The gesture delegate will iterate the rule list executing the <b>shouldReceiveTouch</b> for each rule, 
+  Gesture Delegate logic can be composed based on reusable <code>DelegateRule</code> instances. The gesture delegate will iterate the rule list executing the <code>shouldReceiveTouch</code> for each rule, 
   whenever the first rule response with a true/false value, this response will decide to allow/deny redirect the touchEvent to the gesture for being recognized. 
 </div>
-
 
 <div class="row-fluid">
   {{#view App.GestureDelegateRulesButtonView class="span6"
@@ -41,4 +40,66 @@
   <div class="alert span6">
     The gesture delegate has applied 2 rules (rule3 and rule4).
   </div> 
+</div>
+
+<div class="space is-code"></div>
+<div class="row-fluid">
+
+  <div class="span12">
+    <span class="label label-info">Code</span>
+    <pre>
+App.DelegateRule = Em.DelegateRule.extend({
+  state: 0,
+  shouldReceiveTouch: function(gesture, view, event) {
+    var state = this.get('state');
+    return (state === 0) ? undefined : (state===1) ? false : true;
+  }
+});
+
+App.DelegateRule1 = App.DelegateRule.create({
+  stateBinding: 'App.router.gestureDelegateRulesController.rule1State'
+});
+App.DelegateRule2 = App.DelegateRule.create({
+  stateBinding: 'App.router.gestureDelegateRulesController.rule2State'
+});
+
+App.DelegateRule3 = App.DelegateRule.create({
+  stateBinding: 'App.router.gestureDelegateRulesController.rule3State'
+});
+
+App.DelegateRule4 = App.DelegateRule.create({
+  stateBinding: 'App.router.gestureDelegateRulesController.rule4State'
+});
+
+
+
+var delegate1 = Em.GestureDelegate.create({
+  <b>rules</b>: [App.DelegateRule1, App.DelegateRule2, App.DelegateRule3, App.DelegateRule4]
+});
+
+var delegate2 = Em.GestureDelegate.create({
+  <b>rules</b>: [App.DelegateRule3, App.DelegateRule4]
+});
+
+
+App.GestureDelegateRulesLetterSwipeView = App.LetterSwipeView.extend({
+
+  swipeOptions: {
+    direction: Em.OneGestureDirection.Left | Em.OneGestureDirection.Right,
+    cancelPeriod: 100,
+    swipeThreshold: 10,
+    <b>delegate</b>: delegate1
+  }
+
+});
+
+App.GestureDelegateRulesPanPhotoCanvasView = App.PanPhotoCanvasView.extend({
+
+  panOptions: {
+    <b>delegate</b>: delegate2
+  }
+
+});
+    </pre>
+  </div>
 </div>
