--- a/app/templates/swipe.handlebars
+++ b/app/templates/swipe.handlebars
@@ -1,6 +1,42 @@
 
 <div class="alert alert-info">
-  <p> Swipe left and right on the letter</p>
+  <p>Swipe left and right on the letter. <code>SwipeGestureRecognizer</code></p>
 </div>
 
 {{view App.LetterSwipeView class="is-big"}}
+
+<div class="space is-code"></div>
+
+<div class="row-fluid">
+
+  <div class="span12">
+    <span class="label label-info">Code</span>
+    <pre>
+App.LetterSwipeView = Em.View.extend({
+  letter: 'A',
+
+  <b>swipeOptions</b>: {
+    direction: Em.OneGestureDirection.Left | Em.OneGestureDirection.Right,
+    cancelPeriod: 100,
+    swipeThreshold: 10
+  },
+
+  touchMove: function(event) {
+    event.preventDefault();
+  },
+
+  <b>swipeEnd</b>: function(recognizer, evt) {
+    var direction = recognizer.get('swipeDirection');
+
+    if (direction === Em.OneGestureDirection.Right) {
+      this.changeChar(1);
+    } else if (direction === Em.OneGestureDirection.Left) {
+      this.changeChar(-1);
+    }
+  }
+
+});
+    </pre>
+  </div>
+</div>
+
