Include PressGesture in Swipe example

--- a/app/templates/application.handlebars
+++ b/app/templates/application.handlebars
@@ -25,7 +25,7 @@
                 <li class="nav-header">Examples of Gestures</li>
                 {{view App.NavItemView linkState="panAndPinch" content="Pan & Pinch"}}
                 {{view App.NavItemView linkState="tapAndTouchHold" content="Tap & TouchHold"}}
-                {{view App.NavItemView linkState="swipe" content="Swipe"}}
+                {{view App.NavItemView linkState="swipeAndPress" content="Swipe & Press"}}
                 <li class="nav-header">Examples of Coordination</li>
                 {{view App.NavItemView linkState="simultaneously" content="Simultaneously"}}
                 {{view App.NavItemView linkState="applicationGestureManager" content="Application Gesture Manager"}}
