pinchStart changed to pinchChange

--- a/app/templates/pan_and_pinch.handlebars
+++ b/app/templates/pan_and_pinch.handlebars
@@ -31,7 +31,7 @@ App.PinchPhotoView = Em.View.extend({
     numberOfRequiredTouches: 2
   },
 
-  <b>pinchStart</b>: function(rec, evt) {
+  <b>pinchChange</b>: function(rec, evt) {
     var width,
         image,
         scale;
@@ -39,9 +39,7 @@ App.PinchPhotoView = Em.View.extend({
     image = this.$('img');
     scale = rec.get('scale');
     width = image.width();
-    image.animate({
-      width: width*scale
-    }, 500, "linear");
+    image.width(width*scale);
   },
 
   touchMove: function(event) {
