Add doc create own gestures

--- a/app/templates/application.handlebars
+++ b/app/templates/application.handlebars
@@ -21,6 +21,7 @@
                 <li class="nav-header">Docs</li>
                 {{view App.NavItemView linkState="emberTouch" content="Ember Touch"}}
                 {{view App.NavItemView linkState="objectResponsabilities" content="Object Responsabilities"}}
+                {{view App.NavItemView linkState="createOwnGestures" content="Create own gestures"}}
                 {{view App.NavItemView linkState="handlingEvents" content="Handling Events"}}
                 <li class="nav-header">Examples of Gestures</li>
                 {{view App.NavItemView linkState="panAndPinch" content="Pan & Pinch"}}
