--- a/app/templates/application.handlebars
+++ b/app/templates/application.handlebars
@@ -19,10 +19,10 @@
           <div class="well side-bar">
               <ul class="nav nav-list">
                 <li class="nav-header">Docs</li>
-                {{view App.NavItemView linkState="emberTouch" content="Ember Touch"}}
-                {{view App.NavItemView linkState="objectResponsabilities" content="Object Responsabilities"}}
+                {{view App.NavItemView linkState="usingGestures" content="Using Gestures"}}
                 {{view App.NavItemView linkState="createOwnGestures" content="Create Own Gestures"}}
                 {{view App.NavItemView linkState="handlingEvents" content="Handling Events"}}
+                {{view App.NavItemView linkState="objectResponsabilities" content="Object Responsabilities"}}
                 <li class="nav-header">Examples of Gestures</li>
                 {{view App.NavItemView linkState="panAndPinch" content="Pan & Pinch"}}
                 {{view App.NavItemView linkState="tapAndTouchHold" content="Tap & TouchHold"}}
