--- a/app/templates/handling_events.handlebars
+++ b/app/templates/handling_events.handlebars
@@ -31,24 +31,19 @@
     <blockquote>
       <p>Normally, you will use these methods to prevent default event behaviour in gesturable views.</p>
     </blockquote>
+
+    <pre>
+Em.View.extend({
+  <b>touchMove</b>: function(evt) {
+    // disallow browser elastic scrolling when the panGesture is recognized
+    evt.preventDefault();
+  },
+  panEnd: function() {
+
+  }
+});
+    </pre>
   </div>
 </div>
   
-<div class="row-fluid">
-
-  <div class="span11">
-  <span class="label label-info">Code</span>
-  <pre>
-      Em.View.extend({
-        <b>touchMove</b>: function(evt) {
-          // disallow browser elastic scrolling when the panGesture is recognized
-          evt.preventDefault();
-        },
-        panEnd: function() {
-
-        }
-      });
-  </pre>
-  </div>
-
-</div>
+<div class="space"></div>
