Changed main page and object responsabilities docs

--- a/app/templates/index.handlebars
+++ b/app/templates/index.handlebars
@@ -10,16 +10,23 @@
     </div>
 
     <div class="row-fluid">
-        <div class="span6">
-              <h2>Gestures</h2>
-              <p>Use existing gestures as Tap,
-              TouchHold, Pinch ... or create your own gestures.</p>
+        <div class="span4">
+              <h2>Touch Ready</h2>
+              <p>Use high-level gestures in your webapp to provide richer
+                user experiences. Easily integrate native gestures such as
+                Tap, TouchHold, Pinch, Swipe or Pan.</p>
         </div>
 
-        <div class="span6">
+        <div class="span4">
+          <h2>Create</h2>
+          <p>Use an advanced API to recognize low-level touch events and create
+            your own custom gestures.</p>
+        </div>
+
+        <div class="span4">
               <h2>Coordinate</h2>
-              <p>Provides a set of tools to coordinate your gestures recognition based on your application
-              logic.</p>
+              <p>Control the recognition of gestures with application logic. Browse the
+                examples of coordination to learn more.</p>
         </div>
     </div>
 </div>
